k8s/opensilex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensilex
  namespace: phis
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - phis.pheno.no
      secretName: opensilex-tls
  rules:
    - host: phis.pheno.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensilex
                port:
                  number: 8666
